# CNN

./: CMakeLists.txt  CNN.pro  batch.cpp  batch.h  blas.hpp  cnn.hpp  im2col.hpp  layers.hpp  lenet.cpp  net.hpp  numeric.hpp  solve.hpp  todo.hpp
